--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, odio.</p>
+    <div class="con">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, odio</p>
+ 
     </div>
 </body>
 </html>
